[tool.poetry]
name = "repl_python3_Age-calculator-20"
version = "0.1.0"
description = ""
authors = ["0Michael0 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
consultor = "^0.2.0"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
